--- a/frontend/src/inGame/index.html
+++ b/frontend/src/inGame/index.html
@@ -1,3 +1,5 @@
+ <!-- ingame index html file -->
+  
 <!DOCTYPE html>
 <html lang="ko">
 <head>
@@ -11,8 +13,8 @@
         }
 
         @font-face {
-            font-family: "04B";
-            src: url("assets/font/04B_30__.TTF") format("truetype");
+            font-family: '04B';
+            src: url("./assets/font/04B_30__.ttf") format("truetype");
         }
     </style>
 </head>
