--- a/frontend/index.html
+++ b/frontend/index.html
@@ -12,6 +12,6 @@
   <body>
     <div id="root"></div>
     <!-- Vite 엔트리 -->
-    <script type="module" src="/src/main.jsx"></script>
+    <script type="module" src="src/main.jsx"></script>
   </body>
 </html>
